[package]
name = "tracing-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "example"
path = "examples/examples.rs"
required-features = ["derive"]

[dependencies]
tracing_json_derive = { version = "0.1", optional = true, path = "../tracing_json_derive" }

tracing = { version = "0.1" }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-serde = { version = "0.1", features = ["valuable-serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"

[target.'cfg(any())'.dependencies]
tracing_json_derive = { version = "0.1", path = "../tracing_json_derive" }


[features]
default = ["std"]
std = []
derive = ["tracing_json_derive"]
