[package]
name = "async_functions"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing-json2 = { path = "../../tracing_json", package = "tracing-json", features = [
  "derive",
] }

tracing = { version = "0.1" }
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

tracing-serde = { version = "0.2.0", features = ["valuable-serde"] }
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused = "allow"
unused_mut = "allow"
